--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "mongoose": "^5.13.3",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
