--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.19"
   },
   "devDependencies": {
     "eslint": "7.30.0",
