--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.19"
   },
